--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <link th:href = "@{/bootstrap.min.css}" rel="stylesheet">
-  <script th:src="@{/bootstrap.min.js}" defer></script>
+  <link th:href = "@{/css/bootstrap.min.css}" rel="stylesheet">
+  <script th:src="@{/js/bootstrap.min.js}" defer></script>
   <title>Confirmation Page</title>
 </head>
 <body>
