--- a/src/main/resources/templates/shared/head.html
+++ b/src/main/resources/templates/shared/head.html
@@ -1,11 +1,12 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" th:href="@{images/lawnmower.png}">
     <title>Mr Grass Master</title>
-    <link href="/css/bootstrap.css" data-th-href="@{/css/bootstrap.css}" rel="stylesheet">
-    <link href="/css/style.css" data-th-href="@{/css/style.css}" rel="stylesheet">
-    <script src="/js/bootstrapjquery.js" data-th-src="@{/js/bootstrapjquery.js}" defer></script>
-    <script src="/js/popper.js" data-th-src="@{/js/popper.js}" defer></script>
-    <script src="/js/bootstrap.js" data-th-src="@{/js/bootstrap.js}" defer></script>
-    <script src="/js/javascript.js" data-th-src="@{/js/javascript.js}" defer></script>
+    <link th:href="@{/css/bootstrap.css}" rel="stylesheet">
+    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <script th:src="@{/js/bootstrapjquery.js}" defer></script>
+    <script th:src="@{/js/popper.js}" defer></script>
+    <script th:src="@{/js/bootstrap.js}" defer></script>
+    <script th:src="@{/js/form.js}" defer></script>
 </head>
