[MGM] Contact page now working

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -80,7 +80,7 @@
 
                     <div class="form-group">
                         <label>Message</label>
-                        <textarea class="form-control" rows="5" type="text" name="message" value="" maxlength="400" required></textarea>
+                        <textarea class="form-control" rows="5" type="text" name="message" value="" maxlength="400" id="textarea" required></textarea>
                         <div class="invalid-feedback">
                             please enter a message
                         </div>
