[MGM] Added DateUnitTests

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -87,7 +87,7 @@
                     </div>
 
                     <div class="form-group d-flex justify-content-center">
-                        <button type="submit" onsubmit="submitForm()" class="btn btn-primary btn-lg" role="button"
+                        <button type="submit" onsubmit="submitForm()" id="submit-button"  class="btn btn-primary btn-lg" role="button"
                                 style="margin-top: 0.5rem;">Submit
                         </button>
                     </div>
