[MGM] Initial refatoring of new html

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,214 +1,380 @@
-/* BOOTSTRAP  ******************************************************************
-nav and footer */
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+/********** Custom CSS **********/
+
+#contact-us-now {
+    color: #757575 !important;
 }
 
- @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-		font-size: 3.5rem;
+/* Login page header */
+.page-header {
+    width:100%;
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url(image/grass4.png) repeat;
+}
+
+/* Services/Contact background */
+.courses {
+    width:100%;
+    background: linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, .8), rgba(255, 255, 255, .7), rgba(255, 255, 255, .6), rgba(255, 255, 255, .5)), url(image/grass4.png) repeat;
+}
+
+/* Navbar icon */
+.logo {
+    height:1.5rem;
+}
+
+/* Navbar icon */
+#service-row-1, #service-row-2 {
+    margin-bottom: 4.5rem !important;
+}
+
+/* Guarantee image */
+#guarantee {
+    background-color: transparent !important;
+}
+
+/* Contact form */
+#contact {
+    padding-top: 8rem !important;
+}
+
+
+/********** Template CSS **********/
+:root {
+    --primary: #F3BD00;
+    --secondary: #757575;
+    --light: #F3F6F8;
+    --dark: #0C2B4B;
+}
+
+.py-6 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+}
+
+.my-6 {
+    margin-top: 6rem;
+    margin-bottom: 6rem;
+}
+
+.back-to-top {
+    position: fixed;
+    display: none;
+    right: 30px;
+    bottom: 30px;
+    z-index: 99;
+}
+
+
+/*** Spinner ***/
+#spinner {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .5s ease-out, visibility 0s linear .5s;
+    z-index: 99999;
+}
+
+#spinner.show {
+    transition: opacity .5s ease-out, visibility 0s linear 0s;
+    visibility: visible;
+    opacity: 1;
+}
+
+
+/*** Button ***/
+.btn {
+    font-weight: 500;
+    transition: .5s;
+}
+
+.btn.btn-primary,
+.btn.btn-outline-primary:hover {
+    color: #FFFFFF;
+}
+
+.btn-square {
+    width: 38px;
+    height: 38px;
+}
+
+.btn-sm-square {
+    width: 32px;
+    height: 32px;
+}
+
+.btn-lg-square {
+    width: 48px;
+    height: 48px;
+}
+
+.btn-square,
+.btn-sm-square,
+.btn-lg-square {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: normal;
+}
+
+
+/*** Navbar ***/
+.navbar.sticky-top {
+    top: -100px;
+    transition: .5s;
+}
+
+.navbar .navbar-brand,
+.navbar a.btn {
+    height: 80px
+}
+
+.navbar .navbar-nav .nav-link {
+    margin-right: 30px;
+    padding: 25px 0;
+    color: var(--dark);
+    font-weight: 500;
+    text-transform: uppercase;
+    outline: none;
+}
+
+.navbar .navbar-nav .nav-link:hover,
+.navbar .navbar-nav .nav-link.active {
+    color: var(--primary);
+}
+
+.navbar .dropdown-toggle::after {
+    border: none;
+    content: "\f107";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    vertical-align: middle;
+    margin-left: 8px;
+}
+
+@media (max-width: 991.98px) {
+    .navbar .navbar-nav .nav-link  {
+        margin-right: 0;
+        padding: 10px 0;
+    }
+
+    .navbar .navbar-nav {
+        border-top: 1px solid #EEEEEE;
     }
 }
 
-main > .container {
-  padding: 60px 15px 0;
+@media (min-width: 992px) {
+    .navbar .nav-item .dropdown-menu {
+        display: block;
+        border: none;
+        margin-top: 0;
+        top: 150%;
+        opacity: 0;
+        visibility: hidden;
+        transition: .5s;
+    }
+
+    .navbar .nav-item:hover .dropdown-menu {
+        top: 100%;
+        visibility: visible;
+        transition: .5s;
+        opacity: 1;
+    }
 }
 
-.footer {
-  background-color: #f5f5f5;
-}
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
-
-code {
-  font-size: 80%;
-}
-/******************************************************************************/
-
-/* MY STYLE ********************************************************************
-background image*/
-body{
-    width:100%;
-	background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/grass4.png");
-}
-
-/* Footer */
-#footer-text{
-    font-size:12px;
-}
-/******************************************************************************/
-
-/* INDEX PAGE ******************************************************************
-carousel */
-.carousel-item {
-   height: 100vh;
-   min-height: 300px;
-   background: no-repeat center center scroll;
-   -webkit-background-size: cover;
-   -moz-background-size: cover;
-   -o-background-size: cover;
-   background-size: cover;
-}
-  /*---Firefox Bug Fix --*/
-   .carousel-item {
-   transition: -webkit-transform 0.5s ease;
-   transition: transform 0.5s ease;
-   transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-   -webkit-backface-visibility: visible;
-   backface-visibility: visible;
-}
-
-#first-image{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/one.jpg");
-}
-#second-image{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/two.jpg");
-}
-#third-image{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/three.jpg");
-}
-
+/*** Header ***/
 .carousel-caption {
-   position: absolute;
-   height:30%;
-   width:50%;
-   right: 25%;
-   left:25%;
-   bottom: 10%;
-   top: 50%;
-   z-index: 10;
-   padding-top: 5%;
-   padding-bottom: 5%;
-   color: #fff;
-   text-align: center;
-}
-/******************************************************************************/
-
-/* SERVICES PAGE **************************************************************/
-#services-title{
-    font-weight:400 !important;
-}
-
- /* images too bright so reduced opacity */
-#lawnmower{
-    opacity:0.85;
-}
-#rubbish-removal{
-    opacity:0.875;
-}
-
-#outer-jumbotron{
-    margin-bottom:1.5rem; /* applies to services.html, about.html, contact.html - fixed footer overways additional jumbotron margin*/
-}
-
-#jumbotron-title{
-    display: inline;
-    font-weight:400;
-}
-
-#services-hr{
-    margin-bottom: 0.5rem !important; /*reduce distance between line and cards below*/
-}
-
-.services-outer-jumbotron{
-    background: rgba(233, 236, 239, .85);
-    padding:1rem 1rem 0.5rem 1rem !important; /*top left bottom right*/
-    margin-top:1.5rem;
-}
-/******************************************************************************/
-
-/* ABOUT PAGE *****************************************************************/
-#jumbotron-title{ /* applies to services.html, about.html, contact.html*/
-    display:inline;
-    font-weight:400;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    background: rgba(0, 0, 0, .75);
+    z-index: 1;
 }
 
-.about-outer-jumbotron{
-    background: rgba(233, 236, 239, .85);
-    padding:1rem 1rem 2rem 1rem !important; /*top left bottom right*/
-    margin-top:1.5rem;
+.carousel-control-prev,
+.carousel-control-next {
+    width: 15%;
 }
 
-#guarantee-image{
-    display: block;
-    width:10% !important;
-    float:right;
-    margin-left:1rem;
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--primary);
+    border: 10px solid var(--primary);
 }
 
-/***** Testimonials section *****/
-#testimonial-container{
-    background: rgba(233, 236, 239, .5);
-    width:calc(100% - 31px);
-    padding:2rem 6rem 2rem 6rem !important; /*top left bottom right*/
-    margin:2rem 15px 0px 15px;
+@media (max-width: 768px) {
+    #header-carousel .carousel-item {
+        position: relative;
+        min-height: 450px;
+    }
+    
+    #header-carousel .carousel-item img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
-#opening-quote-icon{
-    display:inline;
-    width:2rem;
-    padding-top:1px;
+
+.breadcrumb-item+.breadcrumb-item::before {
+    color: #999999;
 }
 
-#testimonial-text p:first-child{
-    padding:0px 0px 0px 0px !important;
-    margin:0px 8px 8px 8px !important;
-    text-align:justify;
-}
-#testimonial-text p:nth-child(2){
-    margin:0px 8px 0px 8px !important;
-    text-align:left !important;
-}
-/******************************************************************************/
 
-/* CONTACT PAGE ***************************************************************/
-.contact-outer-jumbotron{
-    background: rgba(233, 236, 239, .85);
-    padding:1rem 1rem 1rem 1rem !important; /*top left bottom right*/
-    margin-top:1.5rem;
+/*** Facts ***/
+@media (min-width: 991.98px) {
+    .facts {
+        position: relative;
+        margin-top: -75px;
+        z-index: 1;
+    }
 }
 
-#main-title{
-    font-weight:500 !important;
-    text-shadow: #6c757d 1.5px 1.5px 1.5px;
-}
 
-.submitted-text{
-    padding:0rem 15rem 0rem 15rem !important; /*top left bottom right*/
-}
-/******************************************************************************/
-.card{
-    background: rgba(233, 236, 239, .5);
-}
-
-.custom_footer{
-    position:absolute;
-    bottom:0rem;
+/*** Courses ***/
+.courses-item .courses-overlay {
+    position: absolute;
     width: 100%;
-}
-.dashed-border{
-    border-style: dashed;
-    border-color: red;
-    border-width: 1px;
+    height: 0;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, .5);
+    overflow: hidden;
+    opacity: 0;
+    transition: .5s;
 }
 
-.dashed-border-blue{
-    border-style: dashed;
-    border-color: blue;
-    border-width: 1px;
+.courses-item:hover .courses-overlay {
+    height: 100%;
+    opacity: 1;
 }
 
-.dashed-border-orange{
-    border-style: dashed;
-    border-color: orange;
-    border-width: 1px;
+
+/*** Team ***/
+.team-items {
+    margin: -.75rem;
 }
+
+.team-item {
+    padding: .75rem;
+}
+
+.team-item::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+    background: #FFFFFF;
+    transition: .5s;
+    z-index: -1;
+}
+
+.team-item:hover::after {
+    height: 100%;
+    background: var(--primary);
+}
+
+.team-item .team-social {
+    position: absolute;
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, .75);
+    overflow: hidden;
+    opacity: 0;
+    transition: .5s;
+}
+
+.team-item:hover .team-social {
+    height: 100%;
+    opacity: 1;
+}
+
+
+/*** Testimonial ***/
+.testimonial-carousel .owl-dots {
+    height: 40px;
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.testimonial-carousel .owl-dot {
+    position: relative;
+    display: inline-block;
+    margin: 0 5px;
+    width: 20px;
+    height: 20px;
+    background: transparent;
+    border: 2px solid var(--primary);
+    transition: .5s;
+}
+
+.testimonial-carousel .owl-dot.active {
+    width: 40px;
+    height: 40px;
+    background: var(--primary);
+}
+
+.testimonial-carousel .owl-item img {
+    width: 150px;
+    height: 150px;
+}
+
+
+/*** Footer ***/
+.footer .btn.btn-link {
+    display: block;
+    margin-bottom: 5px;
+    padding: 0;
+    text-align: left;
+    color: var(--light);
+    font-weight: normal;
+    text-transform: capitalize;
+    transition: .3s;
+}
+
+.footer .btn.btn-link::before {
+    position: relative;
+    content: "\f105";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: var(--light);
+    margin-right: 10px;
+}
+
+.footer .btn.btn-link:hover {
+    color: var(--primary);
+    letter-spacing: 1px;
+    box-shadow: none;
+}
+
+.copyright {
+    background: #092139;
+}
+
+.copyright a {
+    color: var(--primary);
+}
+
+.copyright a:hover {
+    color: var(--light);
+}
+/**/
