--- a/src/main/resources/templates/shared/head.html
+++ b/src/main/resources/templates/shared/head.html
@@ -1,12 +1,20 @@
 <head th:fragment="head">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/png" th:href="@{images/lawnmower.png}">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+    <link rel="icon" type="image/png" th:href="@{/image/man.png}">
     <title>Mr Grass Master</title>
-    <link th:href="@{/css/bootstrap.css}" rel="stylesheet">
+
+    <link th:href="@{/css/google-web-font.css}" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
+    <link th:href="@{/lib/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+
+    <!-- Template Stylesheet -->
     <link th:href="@{/css/style.css}" rel="stylesheet">
-    <script th:src="@{/js/bootstrapjquery.js}" defer></script>
-    <script th:src="@{/js/popper.js}" defer></script>
-    <script th:src="@{/js/bootstrap.js}" defer></script>
-    <script th:src="@{/js/form.js}" defer></script>
 </head>
