--- a/src/main/resources/templates/shared/footer.html
+++ b/src/main/resources/templates/shared/footer.html
@@ -1,6 +1,15 @@
-<nav th:fragment="footer" th:class="${class}">
-    <span class="navbar-text" id="footer-text">
-         &copy; Copyright 2023 JE. All rights reserved.
-     </span>
-</nav>
-</html>
+<!-- Copyright Start -->
+<div th:fragment="footer" class="container-fluid copyright text-light py-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                &copy;
+                <script>document.write(new Date().getFullYear())</script>
+                Mr Grass Master, All Rights Reserved.
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Copyright End -->
+
+
