--- a/src/main/resources/templates/shared/header.html
+++ b/src/main/resources/templates/shared/header.html
@@ -1,32 +1,5 @@
-<!-- Navbar fixed collapsable -->
-<header th:fragment="header">
-    <nav th:class="${class0}">
-        <span class="navbar-brand">
-            <img th:src="@{image/man.png}" width="35" class="d-inline-block align-top" alt="">
-            MGM
-        </span>
-
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li th:class="${class1}">
-                    <a class="nav-link" href="/index.html" data-th-href="@{/index}">Home</a>
-                </li>
-                <li th:class="${class2}">
-                    <a class="nav-link" href="/services.html" data-th-href="@{/services}">Services</a>
-                </li>
-                <li th:class="${class3}">
-                    <a class="nav-link" href="/about.html" data-th-href="@{/about}">About</a>
-                </li>
-                <li th:class="${class4}">
-                    <a class="nav-link" href="/contact.html" data-th-href="@{/contact}">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</header>
-
 <!-- Navbar Start -->
-<nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
+<nav th:fragment="header" class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
     <div class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
         <img th:src="@{image/man.png}" class="d-inline-block align-top logo" alt="">
         <h2 class="m-0"><i class="text-primary me-2"></i>MGM</h2>
@@ -36,13 +9,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="#home" class="nav-item nav-link active">Home</a>
-            <a href="#about" class="nav-item nav-link">About</a>
-            <a href="#services" class="nav-item nav-link">Services</a>
-            <a href="#contact" class="nav-item nav-link">Contact</a>
-            <a href="login.html" class="nav-item nav-link">Login</a>
+            <a href="#home" data-th-href="${href1}" class="nav-item nav-link active">Home</a>
+            <a href="#about" data-th-href="${href2}" class="nav-item nav-link">About</a>
+            <a href="#services" data-th-href="${href3}" class="nav-item nav-link">Services</a>
+            <a href="#contact" data-th-href="${href4}" class="nav-item nav-link">Contact</a>
+            <a href="login.html" data-th-href="${href5}" class="nav-item nav-link">Login</a>
         </div>
-        <a href="#contact" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Get Started<i class="fa fa-arrow-right ms-3"></i></a>
+        <a href="#contact" data-th-href="${href6}" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Get Started<i class="fa fa-arrow-right ms-3"></i></a>
     </div>
 </nav>
 <!-- Navbar End -->
