--- a/src/main/resources/templates/shared/footer.html
+++ b/src/main/resources/templates/shared/footer.html
@@ -1,15 +1,14 @@
 <!-- Copyright Start -->
-<div th:fragment="footer" class="container-fluid copyright text-light py-5 wow fadeIn" data-wow-delay="0.1s">
+<footer th:fragment="footer" class="container-fluid copyright text-light py-4 wow fadeIn footer" id="footer" data-wow-delay="0.1s">
     <div class="container">
-        <div class="row">
             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                 &copy;
                 <script>document.write(new Date().getFullYear())</script>
                 Mr Grass Master, All Rights Reserved.
             </div>
-        </div>
+
     </div>
-</div>
+</footer>
 <!-- Copyright End -->
 
 
