--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,112 +7,163 @@
 
 
 <body id="admin">
-    <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-grow text-primary" role="status"></div>
+    <div id="page-container">
+        <!-- Spinner Start -->
+        <div id="spinner"
+             class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+            <div class="spinner-grow text-primary" role="status"></div>
+        </div>
+        <!-- Spinner End -->
+
+
+        <!-- Insert header -->
+        <nav th:insert="~{shared/header :: header}"
+             th:with="href1='/index#home', href2='/index#about', href3='#/indexservices', href4='#/index#contact', href5='#login', href6='/index#contact', home_active='', login_active=' active', login_text='Logged In'"></nav>
+
+
+        <!-- Page Header Start -->
+        <div class="container-fluid page-header my-5 mt-0 wow fadeIn" data-wow-delay="0.1s">
+            <div class="container text-center">
+                <h1 class="display-4 text-white animated slideInDown mb-4">Admin</h1>
+            </div>
+        </div>
+        <!-- Page Header End -->
+
+        <div id="content-wrap">
+            <!-- Services Start -->
+                <div class="container">
+                    <!-- Form Start -->
+                    <div class="row justify-content-center mb-5">
+
+                        <div class="col-lg-8 mb-0 wow fadeInUp" data-wow-delay="0.1s">
+
+                            <div class="text-left wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                                <h6 class="text-primary text-uppercase">Contact Enquiries</h6>
+                                <p class="mb-4">View and delete enquiries</p>
+                            </div>
+
+                            <div class="bg-primary text-center p-5">
+                                <h1 class="mb-4">Enquiry</h1>
+                                <!-- forms -->
+                                <!-- 'novalidate' disables browser validate check (bootstrap to validate)
+                                      action = where form data is submitted
+                                      method = post data to web server -->
+                                <form class="needs-validation" id="contact-form" novalidate>
+                                    <div class="row g-3">
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" id="first_name" name="first_name"
+                                                       placeholder="First Name" maxlength="50" required>
+                                                <label for="first_name">First Name</label>
+                                                <div class="invalid-feedback">Please enter first name</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" id="last_name" name="last_name"
+                                                       placeholder="First Name" maxlength="50" required>
+                                                <label for="first_name">Last Name</label>
+                                                <div class="invalid-feedback">Please enter last name</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="email" class="form-control border-0" id="email" placeholder="Email"
+                                                       maxlength="50" required>
+                                                <label for="email">Your Email</label>
+                                                <div class="invalid-feedback">Please enter email</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="tel" class="form-control border-0" id="phone" placeholder="Phone"
+                                                       maxlength="50" required>
+                                                <label for="phone">Phone</label>
+                                                <div class="invalid-feedback">Please enter phone</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" id="address_line1"
+                                                       placeholder="Address Line 1" maxlength="60" required>
+                                                <label for="address_line1">Number and road</label>
+                                                <div class="invalid-feedback">Please enter number and road</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" id="address_line2"
+                                                       placeholder="Address Line 2" maxlength="60" required>
+                                                <label for="address_line2">Suburb</label>
+                                                <div class="invalid-feedback">Please enter suburb</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" id="city" placeholder="City" disabled>
+                                                <label for="city">Auckland</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <input type="text" class="form-control border-0" id="country" placeholder="Country"
+                                                       disabled>
+                                                <label for="country">New Zealand</label>
+                                            </div>
+                                        </div>
+
+
+                                        <div class="col-12">
+                                            <div class="form-floating">
+                                        <textarea class="form-control border-0" placeholder="Leave a message here" id="message"
+                                                  name="message"
+                                                  style="height: 100px" maxlength="400" required></textarea>
+                                                <label for="message">Message</label>
+                                                <div class="invalid-feedback">
+                                                    Please enter a message
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <button class="btn btn-dark w-100 py-3" type="submit" onsubmit="submitForm()" id="submit-button"
+                                                        role="button">View
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-floating">
+                                                <button class="btn btn-dark w-100 py-3" type="submit" onsubmit="submitForm()" id=""
+                                                        role="button">Delete
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Contact End -->
+
+
+        <!-- Insert footer -->
+        <footer th:insert="~{shared/footer :: footer}"></footer>
+
+
+        <!-- JavaScript Libraries -->
+        <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
+        <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+        <script th:src="@{/lib/wow/wow.min.js}"></script>
+        <script th:src="@{/lib/easing/easing.min.js}"></script>
+        <script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
+        <script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
+
+        <!-- Custom Javascript -->
+        <script th:src="@{/js/main.js}"></script>
+        <script th:src="@{/js/invoice.js}"></script>
     </div>
-    <!-- Spinner End -->
-
-
-    <!-- Insert header -->
-    <nav th:insert="~{shared/header :: header}" th:with="href1='/index#home', href2='/index#about', href3='#/indexservices', href4='#/index#contact', href5='#login', href6='/index#contact', home_active='', login_active=' active', login_text='Logged In'"></nav>
-
-
-    <!-- Page Header Start -->
-    <div class="container-fluid page-header my-5 mt-0 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <h1 class="display-4 text-white animated slideInDown mb-4">Make some money</h1>
-        </div>
-    </div>
-    <!-- Page Header End -->
-
-    <!-- Form Start -->
-    <div class="container">
-        <h6 class="text-primary text-uppercase mb-2">Invoice</h6>
-        <p>Submit customer invoices</p>
-        <div class="row clearfix">
-            <div class="col-md-12">
-                <table class="table table-bordered table-hover" id="tab_logic">
-                    <thead>
-                    <tr>
-                        <th class="text-center align-middle">Customer ID</th>
-                        <th class="text-center align-middle">Service</th>
-                        <th class="text-center align-middle">Date</th>
-                        <th class="text-center align-middle">Price</th>
-                        <th class="text-center align-middle">Total</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr id='addr0'>
-                        <td class="text-center align-middle">1</td>
-                        <td><input type="text" name='product[]'  placeholder='Enter Service Name' class="form-control"/></td>
-                        <td><input type="date" name='qty[]' placeholder='Enter Date' class="form-control qty" step="0" min="0"/></td>
-                        <td><input type="number" name='price[]' placeholder='Enter Price' class="form-control price" step="0.01" min="0"/></td>
-                        <td><input type="number" name='total[]' placeholder='0.00' class="form-control total" readonly/></td>
-                    </tr>
-                    <tr id='addr1'></tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row clearfix d-flex justify-content-end">
-            <div class="col-md-12 d-flex justify-content-end">
-                <button id="add_row" type="button" class="btn btn-outline-warning ml-2 align-self-end">Add Row</button>
-                <button id='delete_row' type="button"  class="btn btn-outline-warning ml-2 align-self-end">Delete Row</button>
-            </div>
-        </div>
-        <div class="row clearfix mt-2 d-flex flex-row-reverse">
-            <div class="col-md-4 mt-2">
-                <table class="table table-bordered table-hover" id="table-total">
-                    <tbody>
-                    <tr class="align-self-end">
-                        <th class="text-center align-middle">Sub Total</th>
-                        <td class="text-center"><input type="number" name='sub_total' placeholder='0.00' class="form-control" id="sub_total" readonly/></td>
-                    </tr>
-                    <tr>
-                        <th class="text-center align-middle">Tax</th>
-                        <td class="text-center"><div class="input-group mb-2 mb-sm-0">
-                            <input type="number" class="form-control" id="tax" placeholder="0">
-                            <span class="input-group-text">%</span>
-                        </div></td>
-                    </tr>
-                    <tr>
-                        <th class="text-center align-middle">Tax Amount</th>
-                        <td class="text-center"><input type="number" name='tax_amount' id="tax_amount" placeholder='0.00' class="form-control" readonly/></td>
-                    </tr>
-                    <tr id="last-row">
-                        <th class="text-center align-middle">Total</th>
-                        <td class="text-center"><input type="number" name='total_amount' id="total_amount" placeholder='0.00' class="form-control" readonly/></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="row clearfix d-flex justify-content-end">
-            <div class="col-md-12 d-flex justify-content-end">
-                <button id="submit-button" type="button" class="btn btn-outline-warning ml-2 align-self-end">Submit</button>
-            </div>
-        </div>
-    </div>
-    <!-- Form End -->
-
-
-
-
-    <!-- Insert footer -->
-    <footer th:insert="~{shared/dynamic-footer :: footer}"></footer>
-
-
-    <!-- JavaScript Libraries -->
-    <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/lib/wow/wow.min.js}"></script>
-    <script th:src="@{/lib/easing/easing.min.js}"></script>
-    <script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
-    <script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
-
-    <!-- Custom Javascript -->
-    <script th:src="@{/js/main.js}"></script>
-    <script th:src="@{/js/invoice.js}"></script>
 </body>
 </html>
